--- a/style.css
+++ b/style.css
@@ -1,139 +1,151 @@
 /* CSS files add styling rules to your content */
 
 body {
-  font-family: helvetica, arial, sans-serif;
-  margin: 2em;
-  background-color: #255F63;
-  overflow: scroll;
-}
-
-h1 {
-  color: #FBC9BE;
-  margin: 2rem;
-  font-size: 4rem;
-  text-align: center;
-}
-
-p1 {
-  color: #FBC9BE;
-  margin: 2rem;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-}
-
-p2 {
-  color: #FBC9BE;
-  margin: 2rem;
-}
-
-.resi {
-  margin: 1rem;
-  max-width: 300px;
-  height: 300px;
-  object-fit: contain;
-  float: center;
-  display: block;
-}
-
-input[type=text] {
-  width: 210px;
-  box-sizing: border-box;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-  font-size: 16px;
-  background-color: white;
-  background-position: 10px 10px; 
-  background-repeat: no-repeat;
-  padding: 12px 20px 12px 40px;
-  transition: width 0.4s ease-in-out;
-  display: flex;
-  justify-content: center;
-}
-
-@media only screen and (max-width: 800px) {
-  body {
+    font-family: helvetica, arial, sans-serif;
     margin: 2em;
-    background: #2d1e5d;
+    background-color: #255F63;
+    overflow: scroll;
   }
-  p3 {
-    color: #fadea9;
+  
+  h1 {
+    color: #FBC9BE;
+    margin: 2rem;
+    font-size: 4rem;
+    text-align: center;
+    font-family: 'Qaligo';
   }
-  h3 {
-    color: #fadea9;
+  
+  p1 {
+    color: #FBC9BE;
+    margin: 2rem;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    font-family: 'Gambetta Light';
   }
-  h2 {
-    color: #fadea9;
+  
+  p2 {
+    color: #FBC9BE;
+    margin: 2rem;
   }
-}
+  
+  .resi {
+    margin: 1rem;
+    max-width: 300px;
+    height: 300px;
+    object-fit: contain;
+    float: center;
+    display: block;
+  }
+  
+  input[type=text] {
+    width: 210px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+    transition: width 0.4s ease-in-out;
+    display: flex;
+    justify-content: center;
+  }
+  
+  @media only screen and (max-width: 800px) {
+    body {
+      margin: 2em;
+      background: #2d1e5d;
+    }
+    p3 {
+      color: #fadea9;
+    }
+    h3 {
+      color: #fadea9;
+    }
+    h2 {
+      color: #fadea9;
+    }
+  }
+  
+  .navbar {
+    overflow: hidden;
+    background-color: #FBC9BE;
+    font-family: 'Gambetta Light';
+  }
+  
+  .navbar a {
+    float: left;
+    font-size: 16px;
+    color: #255F63;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  .dropdown {
+    float: left;
+    overflow: hidden;
+      margin: auto;
+    width: 50%;
+  }
+  
+  .dropdown .dropbtn {
+    cursor: pointer;
+    font-size: 16px;  
+    border: none;
+    outline: none;
+    color: #255F63;;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  
+  .navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
+    background-color: #598F93;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  .show {
+    display: block;
+  }
+  
+  #input {
+    margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+    font-family: 'Gambetta Light';
+  }
+  
+  @font-face {
+      font-family: 'Gambetta Light';
+      src: url("./assets/GambettaLight.otf") format("opentype");
+  }  
 
-.navbar {
-  overflow: hidden;
-  background-color: #FBC9BE;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.navbar a {
-  float: left;
-  font-size: 16px;
-  color: #255F63;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-    margin: auto;
-  width: 50%;
-}
-
-.dropdown .dropbtn {
-  cursor: pointer;
-  font-size: 16px;  
-  border: none;
-  outline: none;
-  color: #255F63;;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
-  background-color: #598F93;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {
-  background-color: #ddd;
-}
-
-.show {
-  display: block;
-}
-
-#input {
-  margin: 0 auto;
-margin-left: auto;
-margin-right: auto;
-}
-
+  @font-face {
+      font-family: 'Qaligo';
+      src: url("./assets/Qaligo.otf") format("opentype");
+  }
