--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   h1 {
     color: #FBC9BE;
     margin: 2rem;
-    font-size: 4rem;
+    font-size: 5vw;
     text-align: center;
     font-family: "Qaligo";
   }
